dashboard: fix global dropdown z-index

--- a/src/assets/css/ide.css
+++ b/src/assets/css/ide.css
@@ -1144,7 +1144,7 @@ a {
 	width: 1280px;
 	padding: 5px;
 	margin: 15px auto 0;
-	z-index: 6;
+	z-index: 11;
 }
 
 #region-switch {
